# matrix-synapse-authentik-onbaording-bot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  BATTLE_PLAN.md  CHANGELOG.md  Dockerfile  GOALS.md  README.md  build_dev_env.sh  config.example.yml  config.yml  dockerfile  gen_config_docs.sh  gen_example_config.sh  pyproject.toml  reqs.txt  run.py  run_dev.sh  run_integration_tests.sh  run_onbot.sh  run_onbot_reconcile_once.sh  run_tests.sh  setup.py  todo.md
.github/workflows/: ci.yml  release.yml
docs/: CONFIG_REFERENCE.md  architecture.md  configuration.md  deployment.md  development.md  features.md  testing.md  troubleshooting.md
docs/adr/: 0001-clean-slate-reuse-logic.md  0002-reconciliation-not-events.md  0003-onboarding-is-event-driven.md  0004-modular-monolith.md  0005-quarantine-lifecycle.md  0006-auth-topology-mas-authentik.md  0007-async-one-http-base-client.md  0008-matrix-client-library.md  0009-e2ee-stance.md  0010-admin-control-room.md  0011-room-version-12.md  0012-lobby-rooms.md  README.md
docs/project/: BATTLE_PLAN.md  README.md
legacy/: README.md
legacy/onbot/: api_client_authentik.py  main.py  power_level_manager.py  utils.py
onbot/: __init__.py  __main__.py  api_client_authentik.py  api_client_matrix.py  api_client_synapse_admin.py  app.py  authentik_api.py  authentik_api_client.py  bot.py  cli.py  config.py  discovery.py  events.py  healthcheck.py  identity.py  logging.py  main.py  matrix_api_client.py  media.py  models.py  power_level_manager.py  readme_feat_room_avatar.txt  synapse_admin_api.py  synapse_admin_api_client.py  sync.py  test.py  utils.py
onbot/admin/: __init__.py  admins.py  broadcast.py  commands.py  control_room.py
onbot/auth/: __init__.py  token_provider.py
onbot/clients/: __init__.py  authentik.py  base.py  mas_admin.py  matrix.py  synapse_admin.py  versions.py
onbot/lifecycle/: __init__.py  accounts.py
onbot/onboarding/: __init__.py  listener.py  notice_board.py  welcome.py
onbot/reconciler/: __init__.py  effectors.py  engine.py  join_rules.py  membership.py  power_levels.py  rooms.py  state.py
onbot/rooms/: __init__.py  admin.py
scripts/: gen_config_docs.py  provision-bot-account.sh
tests/: README.md
tests/contract/: test_authentik_client.py  test_base_client.py  test_matrix_client.py  test_synapse_admin_client.py
tests/integration/: conftest.py  stack_api.py  test_admin_room.py  test_lifecycle.py  test_lobby.py  test_media.py  test_onboarding.py  test_provisioning.py  test_q1_experiment.py  test_reconcile.py
tests/integration/stack/: docker-compose.yml
tests/integration/stack/authentik/blueprints/: onbot.yaml
tests/integration/stack/mas/: config.yaml
tests/integration/stack/postgres/: 10-init-dbs.sh
tests/integration/stack/synapse/: homeserver.yaml
tests/unit/: test_admin_commands.py  test_admin_room.py  test_admins.py  test_broadcast.py  test_cli.py  test_config.py  test_config_docs.py  test_control_room.py  test_discovery.py  test_effectors.py  test_engine.py  test_healthcheck.py  test_identity.py  test_join_rules.py  test_lifecycle.py  test_listener.py  test_main_module.py  test_media.py  test_membership.py  test_notice_board.py  test_power_levels.py  test_rooms.py  test_skeleton.py  test_state.py  test_sync.py  test_token_provider.py  test_utils.py  test_versions.py  test_welcome.py
