[project]
name = "onbot"
version = "0.1.0.dev0"
description = "Keep a Matrix (Synapse) homeserver in sync with Authentik and onboard new users."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.14"
authors = [{ name = "DZD" }]
keywords = ["matrix", "synapse", "authentik", "mas", "bot", "onboarding"]
classifiers = [
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
]

# Runtime deps for the new architecture (AD-7). The Matrix client library decision
# (matrix-nio vs raw httpx vs mautrix) is deferred to a Phase 6 ADR, so no Matrix
# library is pinned here yet.
dependencies = [
    "httpx>=0.27",
    "tenacity>=9.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyyaml>=6.0",
]

[project.scripts]
onbot = "onbot.cli:main"

[project.urls]
Homepage = "https://github.com/DZD-eV-Diabetes-Research/matrix-synapse-authentik-onbaording-bot"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "respx>=0.21",
    "pre-commit>=4.0",
    "types-pyyaml>=6.0",
]

# --- Ruff: lint + format -----------------------------------------------------
[tool.ruff]
target-version = "py314"
line-length = 110
extend-exclude = ["legacy"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle / pyflakes
    "I",             # isort
    "UP",            # pyupgrade
    "B",             # bugbear
    "C4",            # comprehensions
    "SIM",           # simplify
    "RUF",           # ruff-specific
]

# --- Mypy: type checking -----------------------------------------------------
[tool.mypy]
python_version = "3.14"
strict = true
warn_unused_configs = true
exclude = ["legacy/"]

# --- Pytest ------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
markers = [
    "integration: end-to-end tests against a live Synapse/MAS/Authentik stack (own CI job).",
]

[tool.coverage.run]
source = ["onbot"]
branch = true
